Preserve case-insensitive indexed parameter lookup